--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "booklist-project",
+  "name": "api-js-catalogolivros",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://codbrayan.github.io/api-js-catalogolivros",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -22,6 +25,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "vite": "npm:rolldown-vite@7.1.14"
   },
